--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2,6 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    color: red;
+body {
+  color: red;
+}
+.modal-content {
+  max-height: 90vh;
+  overflow: auto;
+}
+
+.btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  color: white;
+  &:disabled {
+    background-color: #2589f5;
+    color: white;
+  }
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  color: white;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
